--- a/resume.css
+++ b/resume.css
@@ -1,4 +1,4 @@
-body { 
+body {
   background-color: rgb(3, 3, 52);
 }
 .container {
@@ -136,6 +136,17 @@ body {
 .project2list p {
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+@media (max-width: 768px) {
+  body {
+    background-color: red;
+  }
+  .container {
+    margin: 5px 5px;
+    background-color: rgb(239, 247, 239);
+    padding-bottom: 40px;
+  }
 }
 
 @page {
