--- a/resume.css
+++ b/resume.css
@@ -7,7 +7,6 @@ body {
   padding-bottom: 40px;
 }
 .container-print-mode {
-  /* margin: 32px 300px; */
   background-color: rgb(239, 247, 239);
   padding-bottom: 40px;
 }
@@ -74,7 +73,7 @@ body {
   margin-left: 12px;
   margin-bottom: 1px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 800;
   font-size: small;
 }
 
@@ -83,7 +82,7 @@ body {
   margin-left: 12px;
   margin-bottom: 1px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 800;
   font-size: 16px;
 }
 .skillback {
@@ -91,7 +90,7 @@ body {
   margin-left: 12px;
   margin-bottom: 1px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 800;
   font-size: 16px;
 }
 .autodealer {
@@ -99,7 +98,7 @@ body {
   margin-left: 12px;
   margin-bottom: 1px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 800;
   font-size: small;
 }
 .postback {
@@ -107,7 +106,7 @@ body {
   margin-left: 12px;
   margin-bottom: 1px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 800;
   font-size: 16px;
 }
 
