--- a/resume.css
+++ b/resume.css
@@ -14,6 +14,7 @@ body {
   text-align: center;
   margin-bottom: 0;
   padding-top: 24px;
+  color: rgb(3, 3, 92);
 }
 .contact {
   text-align: center;
